--- a/Photo Editor/task/src/main/res/values/strings.xml
+++ b/Photo Editor/task/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="brightness_filter">Brightness Filter</string>
     <string name="save">Save</string>
     <string name="contrast_filter">Contrast Filter</string>
+    <string name="gamma">Gamma</string>
+    <string name="saturation">Saturation</string>
 </resources>
